--- a/responsive.css
+++ b/responsive.css
@@ -5,19 +5,18 @@
     }
     .input {
         margin: 0 auto;
-        display: grid;
         gap: 20px;
         grid-template-columns: repeat(1,1fr);
         width: 30%;
         padding: 20px;
-
     } 
     .tours{
         flex-direction: column;
+        grid-template-columns: 1fr;
+        width: 100%;
     }
     .tours img , .tours-content{
         width: 100%;
-        height: 50%;
     }
     .grid-items-1,.grid-items-2,.grid-items-3{
         flex-direction: column;
@@ -35,13 +34,16 @@
     margin: 0 auto;
    }
    .deals-container-content {
-    /* min-height: 200px; */
     padding: 20px;
     left: 15%;
     width: 30%;
     width: 60%;
-    margin-top: 30%;
-   
+}
+.deals-container-content-2{
+    padding: 20px;
+    left: 15%;
+    width: 30%;
+    width: 60%;
 }
 .newslatter{
     flex-direction: column;
@@ -59,7 +61,7 @@
   }
 .newslatter-img {
     top: 77%;
-    left: 50%;
+    left: 61%;
   }
     
 }
