--- a/responsive.css
+++ b/responsive.css
@@ -11,15 +11,23 @@
         padding: 20px;
     } 
     .tours{
+        margin: 0 auto;
         flex-direction: column;
-        grid-template-columns: 1fr;
+        width: 80%;
+    }
+    .tours-content{
+        width: 92%;
+    }
+    .tours-img{
         width: 100%;
     }
-    .tours img , .tours-content{
+    .tours img img {
         width: 100%;
-        height: 260px;
-        margin-top: 90px;
+        height: 230px;
+        /* margin-top: 90px; */
     }
+
+
     .grid-items-1,.grid-items-2,.grid-items-3{
         flex-direction: column;
         width: 100%;
@@ -39,14 +47,14 @@
    .deals-container-content {
     padding: 20px;
     left: 15%;
-    width: 30%;
     width: 60%;
+    margin-top: 30%;
 }
 .deals-container-content-2{
     padding: 20px;
     left: 15%;
-    width: 30%;
     width: 60%;
+    margin-top: 30%;
 }
 .newslatter{
     flex-direction: column;
@@ -64,7 +72,7 @@
   }
 .newslatter-img {
     top: 70%;
-    left: 50%;
+    left: 47%;
   }
     
 }
