--- a/style.css
+++ b/style.css
@@ -46,17 +46,17 @@
   margin: 20px auto;
   text-align: center;
   align-items: center;
-  padding-top: 80px;
   padding-bottom: 90px;
-  /* min-height: 300px; */
   border-radius: 16px;
   background: linear-gradient(180deg, #070211 0%, rgba(7, 2, 17, 0) 0%),
   url("image/Group\ 13\ \(1\)\ \(1\).png");
   background-repeat: no-repeat;  
+  background-size: cover;
 }
 .banner-content {
   margin: 0 auto;
   width: 70%;
+  padding: 20px;
 }
 .banner-content h1 {
   color: #fff;
@@ -85,21 +85,23 @@
   border-radius: 8px;
   background: #fff;
   border: 0;
-  height: 30px;
+  height: 40px;
   padding: 10px;
   display: flex;
   justify-content: space-between;
+  align-items: center;
 }
 .special {
   color: #fff;
   border: 0;
   border-radius: 8px;
-  height: 30px;
+  height: 40px;
   border-radius: 8px;
   background: #FF5400;
   padding: 10px;
   display: flex;
   justify-content: space-between;
+  align-items: center;
 }
 /* Tours Section */
 .tours{
@@ -140,7 +142,7 @@ font-weight: 800;
 font-family: Mulish;
 font-size: 16px;
 font-weight: 400;
-line-height: 26px; /* 162.5% */
+line-height: 26px;
 }
 .grid-items-1 {
   display: flex;
@@ -238,22 +240,25 @@ background: rgba(233, 68, 68, 0.05);
   min-height: 600px;
   background-image: url(image/Group\ 39.png);
   width: 80%;
-  margin: 0px auto;
+  margin: 20px auto;
   background-repeat: no-repeat;
+  background-size: cover;
 }
 .deals-2{
   min-height: 600px;
   background-image: url(image/Group\ 40.png);
   width: 80%;
-  margin: 0px auto;
+  margin: 20px auto;
   background-repeat: no-repeat;
+  background-size: cover;
 }
 .deals-3{
   min-height: 600px;
   background-image: url(image/Group\ 39.png);
   width: 80%;
-  margin: 0px auto;
+  margin: 20px auto;
   background-repeat: no-repeat;
+  background-size: cover;
 }
 .deals-container img{
 width: 100%;
@@ -285,7 +290,7 @@ font-family: Mulish;
 font-size: 16px;
 font-style: normal;
 font-weight: 400;
-line-height: 26px; /* 162.5% */
+line-height: 26px;
 }
 .common-title{
   color: #131318;
@@ -316,9 +321,11 @@ padding: 20px;
 .myself-content{
   width: 80%;
   margin: 20px auto;
-  min-height: 330px;
   display: flex;
   gap: 10px;
+  border: 2px dotted rgb(104, 26, 26) ;
+  border-radius: 10px;
+  padding: 20px;
 }
 .myself-content-description{
   width: 50%;
@@ -391,16 +398,14 @@ font-weight: 800;
 /* Footer */
 .footer-main{
   background: rgba(19, 19, 24, 0.05);
-  min-height: 200px;
   margin:10px auto;
   width: 100%;
-  justify-content: center;
 }
 .footer-main-header{
   display: flex;
   justify-content: center;
   gap: 30px;
-  padding-top: 20px;
+  padding: 20px;
 }
 .footer-middle p{
   display: flex;
